public/css/style.css
body {
  margin-bottom: 60px;
  padding: 0;
  font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;
}

#header {
  margin-top: 30px;
  text-align: center;
}

#title {
  font-family: "Courier New", Courier, monospace;
  font-size: 32px;
  margin-bottom: 20px;
}

#title a {
  color: #000;
  text-decoration: none;
}

#title a:hover {
  color: #555;
  text-decoration: none;
}

#title sup {
  font-size: 14px;
}

.input-container {
  margin: 4px auto;
  width: 510px;
  border: 1px solid #d9d9d9;
  padding: 1px;
}

input {
  box-sizing: border-box;
  border: none;
  outline: none;
  width: 500px;
  font-size: 14px;
  margin: 6px;
}

button {
  margin-top: 10px;
  font-size: 16px;
  border: none;
  background-color: #ddd;
  border-radius: 2px;
  color: #757575;
  outline: none;
}

#search {
  margin-bottom: 6px;
  height: 32px;
  padding-left: 20px;
  padding-right: 20px;
}

#search:hover {
  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
  border: 1px solid #c6c6c6;
  color: #222;
}

#loading, #error {
  display: none;
}

#content {
  visibility: hidden;
}

#participants {
  margin-bottom: 15px;
}

#participants a {
  color: #666;
  text-decoration: none;
}

#participants a:hover {
  color: #333;
}

.username a {
  color: #888;
  text-decoration: none;
}

.username a:hover {
  color: #555;
}

a.text-url {
  color: #369;
  text-decoration: none;
}

a.text-url:hover {
  color: #246;
}

/* Arrow pointer on tree nodes (except on actual hyperlinks) */
a.jstree-anchor {
  cursor: default;
}

/* Round border for dp */
.jstree-icon:empty {
  border-radius: 5px;
}

/* Bottom margin of tweet nodes */
.jstree-anchor {
  margin-bottom: 2px;
}

.tooltipster-sidetip .tooltipster-box {
  border-color: #565656;
}

.tooltipster-sidetip.tooltipster-right .tooltipster-arrow-border {
  border-right-color: #565656;
}

.tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-border {
  border-bottom-color: #565656;
}

.tooltipster-sidetip .tooltipster-content {
  font-size: 14px;
}

#help-container {
  text-align: right;
}

#help {
  border-bottom: 2px dotted;
  margin-left: auto;
  margin-right: 0;
  color: #04048c;
}

#help:hover {
  cursor: pointer;
  color: #0d0de6;
}

img.emoji {
   height: 1em;
   width: 1em;
   margin: 0 .05em 0 .1em;
   vertical-align: -0.1em;
}

